agrego test de hijos